[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/ui/menu_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://resources/ui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/GameMenu.gd" type="Script" id=3]
[ext_resource path="res://src/UI/ItemsDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/StatsDialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/SaveSlotPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/AboutDialog.tscn" type="PackedScene" id=7]

[node name="GameMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="MenuPanel" type="PopupPanel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 150.0
grow_vertical = 0
rect_min_size = Vector2( 150, 200 )
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -190.0
margin_right = 140.0
margin_bottom = -10.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 8.0
margin_right = 130.0
margin_bottom = 28.0
focus_neighbour_top = NodePath("../Back")
text = "状态"

[node name="Items" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 32.0
margin_right = 130.0
margin_bottom = 52.0
text = "道具"

[node name="Load" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 56.0
margin_right = 130.0
margin_bottom = 76.0
text = "读取进度"

[node name="Save" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 80.0
margin_right = 130.0
margin_bottom = 100.0
text = "存储进度"

[node name="About" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 104.0
margin_right = 130.0
margin_bottom = 124.0
text = "关于游戏"

[node name="Exit" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 128.0
margin_right = 130.0
margin_bottom = 148.0
text = "退出"

[node name="Back" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 152.0
margin_right = 130.0
margin_bottom = 172.0
focus_neighbour_bottom = NodePath("../Stats")
text = "返回游戏"

[node name="StatsDialog" parent="." instance=ExtResource( 5 )]

[node name="ItemsDialog" parent="." instance=ExtResource( 4 )]

[node name="SavePanel" parent="." instance=ExtResource( 6 )]

[node name="LoadPanel" parent="." instance=ExtResource( 6 )]
only_existing = true

[node name="AboutDialog" parent="." instance=ExtResource( 7 )]

[connection signal="about_to_show" from="MenuPanel" to="." method="_on_MenuPanel_about_to_show"]
[connection signal="popup_hide" from="MenuPanel" to="." method="_on_MenuPanel_popup_hide"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Stats" to="." method="_on_Stats_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="item_selected" from="ItemsDialog" to="." method="_on_ItemsDialog_item_selected"]
[connection signal="save_file_selected" from="SavePanel" to="." method="_on_SavePanel_save_file_selected"]
[connection signal="save_file_selected" from="LoadPanel" to="." method="_on_LoadPanel_save_file_selected"]
